--- a/_posts/about/2014-08-08-facts.md
+++ b/_posts/about/2014-08-08-facts.md
@@ -39,9 +39,9 @@ Key facts about TechnoPark Corp.:
   <tr><td>Legal status:</td><td>Corporation</td></tr>
   <tr><td>Full-time Employees:</td><td>6</td></tr>
   <tr><td>Headquarters and Sales Office:</td>
-  <td>568 Ninth Street South 202,<br/>
-      Naples, Florida 34102, USA<br/>
-      tel. +1 (860) 506 5536</td></tr>
+  <td>440 North Wolfe Road,<br/>
+      Sunnyvale, CA 94085<br/>
+      tel. (860) 506-5536</td></tr>
   <tr><td>Profile:</td><td>Custom software development company</td></tr>
   <tr><td>Patents (including pending ones):</td><td>
       <a href='https://www.google.com/patents/US20100042968'>12/193,010</a>,
