--- a/_posts/2014-08-08-contacts.md
+++ b/_posts/2014-08-08-contacts.md
@@ -13,10 +13,10 @@ next_step: about/why
 
 Call now and get immediate consultation for your software project.
 
-568, 9th Street South, 202<br/>
-Naples, Florida, 34102<br/>
+440 North Wolfe Road<br/>
+Sunnyvale, CA 94085<br/>
 United States of America<br/>
 [sales@technoparkcorp.com](mailto:sales@technoparkcorp.com)<br/>
-tel. (860) 506 5536
+tel. (860) 506-5536
 
 We respond to email inquiries in 24 hours or less.
