--- a/_posts/2014-08-08-contacts.md
+++ b/_posts/2014-08-08-contacts.md
@@ -20,3 +20,24 @@ United States of America<br/>
 tel. (860) 506-5536
 
 We respond to email inquiries in 24 hours or less.
+
+<style>
+#map-canvas {
+  width: 500px;
+  height: 400px;
+}
+</style>
+<script src="https://maps.googleapis.com/maps/api/js"></script>
+<script>
+function initialize() {
+  var mapCanvas = document.getElementById('map-canvas');
+  var mapOptions = {
+    center: new google.maps.LatLng(37.383525, -122.012997),
+    zoom: 8,
+    mapTypeId: google.maps.MapTypeId.ROADMAP
+  }
+  var map = new google.maps.Map(mapCanvas, mapOptions)
+}
+google.maps.event.addDomListener(window, 'load', initialize);
+</script>
+<div id="map-canvas"></div>
