--- a/_posts/2014-08-08-contacts.md
+++ b/_posts/2014-08-08-contacts.md
@@ -23,20 +23,28 @@ We respond to email inquiries in 24 hours or less.
 
 <style>
 #map-canvas {
-  width: 500px;
-  height: 400px;
+  width: 350px;
+  height: 200px;
 }
 </style>
 <script src="https://maps.googleapis.com/maps/api/js"></script>
 <script>
 function initialize() {
   var mapCanvas = document.getElementById('map-canvas');
+  var coords = new google.maps.LatLng(37.383525, -122.012997);
   var mapOptions = {
-    center: new google.maps.LatLng(37.383525, -122.012997),
+    center: coords,
     zoom: 8,
     mapTypeId: google.maps.MapTypeId.ROADMAP
-  }
-  var map = new google.maps.Map(mapCanvas, mapOptions)
+  };
+  var map = new google.maps.Map(mapCanvas, mapOptions);
+  var marker = new google.maps.Marker(
+    {
+      position: coords,
+      map: map,
+      title: 'our office'
+    }
+  );
 }
 google.maps.event.addDomListener(window, 'load', initialize);
 </script>
