--- a/_posts/2014-08-08-contacts.md
+++ b/_posts/2014-08-08-contacts.md
@@ -42,7 +42,7 @@ function initialize() {
     {
       position: coords,
       map: map,
-      title: 'our office'
+      title: 'our office in Plug And Play Tech Center'
     }
   );
 }
