--- a/_posts/2014-08-08-contacts.md
+++ b/_posts/2014-08-08-contacts.md
@@ -13,8 +13,8 @@ next_step: about/why
 
 Call now and get immediate consultation for your software project.
 
-440 North Wolfe Road<br/>
-Sunnyvale, CA 94085<br/>
+555 Bryant St, Ste 470<br/>
+Palo Alto, CA 94301<br/>
 United States of America<br/>
 [sales@technoparkcorp.com](mailto:sales@technoparkcorp.com)<br/>
 tel. (860) 506-5536
